# lean-crafter

./: .gitignore  Dockerfile  README.md
lithe/: CrafterWeb.lean  lake-manifest.json  lakefile.lean  plan.md
lithe/shim/: Cargo.toml  build.rs
lithe/shim/src/: ffi.rs  lib.rs  main.rs  websocket.rs  wire.rs
lithe/shim/tests/: integration.rs
src_lean4/: CrafterLean.lean  CrafterLeanTests.lean  Main.lean  lake-manifest.json  lakefile.toml  properties.md  scope.txt
src_lean4/CrafterLean/: Achievement.lean  Action.lean  Config.lean  Entity.lean  Inventory.lean  PropertiesTests.lean  Serialize.lean
src_lean4/CrafterLean/Craftax/: Loot.lean  LootTests.lean  Mobs.lean
src_lean4/CrafterLean/FFI/: Exports.lean
src_lean4/CrafterLean/Oracle/: SaveLoad.lean  State.lean  Step.lean
src_lean4/CrafterLean/Render/: Ascii.lean
src_lean4/CrafterLean/Session/: Types.lean
src_lean4/CrafterLean/Types/: ChaCha8.lean  Coord.lean  Grid.lean  RNG.lean
src_lean4/CrafterLean/World/: Material.lean  Types.lean
src_lean4/CrafterLean/WorldGen/: Generator.lean  OpenSimplex.lean
